# rust-easy-install

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: main.rs
