[package]
name = "rust-easy-install"
version = "0.0.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"

[profile.release-lto]
inherits = "release"
codegen-units = 1
lto = "fat"
opt-level = 3
panic ="abort"
